@@ -1,3 +1,8 @@
+2007-10-23 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
+
+	* Fixed bug "[ 1817734 ] Relocated headers leave require objects
+	  at source module"
+
 2007-10-22 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
 
 	* removed libconfix/testutils/find.py
